fix:chat